2012-06-25 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_graph.php, include/graphs/functions_pchart.php,
	include/graphs/fgraph.php, operation/agentes/stat_win.php,
	operation/reporting/graph_viewer.php: cleaned source code style.
	
	* include/functions_custom_graphs.php: fixed into the function
	"graphic_combined_module" the show html entities in the name of
	agents in legends, show better the legend for long size names of
	agents and modules.

2012-06-25  Junichi Satoh  <junichi@rworks.jp>

	* include/languages/ja.po, include/languages/ja.mo: Changed some
	Japanese translations.

2012-06-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* general/error_emptyconfig.php
	 general/error_perms.php
	 general/error_authconfig.php
	 general/error_noconfig.php
	 general/error_install.php
	 general/error_dbconfig.php: Make them IE9 compatible.

2012-06-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php
	godmode/reporting/graph_builder.graph_editor.php: Fixed some
	metaconsole connections checks merged from trunk

2012-06-22  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Improved several 
	parts of SLA reports. Add icons to criticity, etc.
	
	* include/functions_api.php: Fixed bug in get events
	api function remaning function
	
	* godmode/reporting/graph_builder.graph_editor.php: Increase
	the size of little combo boxes in combined graphs editor

2012-06-22 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager/load_updatemanager.php,
	extensions/update_manager/lib/functions.ajax.php,
	extensions/update_manager/lib/libupdate_manager_client.php,
	extensions/update_manager/main.php,
	extensions/update_manager/debug.php: added the feature to get traces
	of execution. Only change the flag for debug in debug.php .

2012-06-22  Sancho Lerena <slerena@artica.es>

	* godmode/massive/massive_edit_modules.php: Changed label to a more
	appropiate.
