@@ -494,7 +494,7 @@ CREATE TABLE IF NOT EXISTS `tmensajes` (
   `id_mensaje` int(10) unsigned NOT NULL auto_increment,
   `id_usuario_origen` varchar(60) NOT NULL default '',
   `id_usuario_destino` varchar(60) NOT NULL default '',
-  `mensaje` tinytext NOT NULL,
+  `mensaje` text NOT NULL,
   `timestamp` bigint (20) unsigned NOT NULL default '0',
   `subject` varchar(255) NOT NULL default '',
   `estado` int(4) unsigned NOT NULL default '0',
